--- a/examples/notebooks/01-services.ipynb
+++ b/examples/notebooks/01-services.ipynb
@@ -102,10 +102,36 @@
     "    initial_state = \"unique\"\n",
     "    return build_service_from_transitions(transitions, initial_state, final_states)  # type: ignore\n",
     "\n",
+    "def user_behaviour() -> Service:\n",
+    "    \"\"\"Build the user behaviour.\"\"\"\n",
+    "    transitions = {\n",
+    "        \"s0\": {\n",
+    "            \"move_to_bedroom\": \"s0\",\n",
+    "            \"move_to_bathroom\": \"s1\",\n",
+    "            \"move_to_kitchen\": \"s3\",\n",
+    "        },\n",
+    "       \"s1\": {\n",
+    "            \"move_to_bathroom\": \"s1\",\n",
+    "            \"wash\": \"s2\",\n",
+    "        },\n",
+    "       \"s2\": {\n",
+    "            \"move_to_bedroom\": \"s0\",\n",
+    "        },\n",
+    "       \"s3\": {\n",
+    "            \"move_to_kitchen\": \"s3\",\n",
+    "            \"cook_eggs\": \"s0\",\n",
+    "            \"prepare_tea\": \"s0\",\n",
+    "        },\n",
+    "    }\n",
+    "    final_states = {\"s0\"}\n",
+    "    initial_state = \"s0\"\n",
+    "    return build_service_from_transitions(transitions, initial_state, final_states)  # type: ignore\n",
+    "\n",
     "bathroom_heating_service = bathroom_heating_device()\n",
     "bathtub_service = bathtub_device()\n",
     "door_service = door_device()\n",
     "kitchen_exhaust_fan_service = kitchen_exhaust_fan_device()\n"
+    "user_behaviour_service = user_behaviour()\n"
    ]
   },
   {
