--- a/examples/notebooks/01-services.ipynb
+++ b/examples/notebooks/01-services.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "from examples.notebooks.utils import render_service\n",
-    "from stochastic_service_composition.services import Service, build_service_from_transitions, product\n",
+    "from stochastic_service_composition.services import Service, build_service_from_transitions, build_system_service\n",
     "\n",
     "\n",
     "def bathroom_heating_device() -> Service:\n",
@@ -426,7 +426,7 @@
     "## System service\n",
     "\n",
     "In this section, we show the computation of the *system service*,\n",
-    "i.e. the product between the services.\n",
+    "i.e. the build_system_service between the services.\n",
     "\n",
     "### Product between bathroom heating and door devices"
    ]
@@ -572,7 +572,7 @@
     }
    ],
    "source": [
-    "system_service = product(bathroom_heating_service, door_service)\n",
+    "system_service = build_system_service(bathroom_heating_service, door_service)\n",
     "render_service(system_service, style=\"\")"
    ]
   },
@@ -784,7 +784,7 @@
     }
    ],
    "source": [
-    "system_service = product(bathroom_heating_service, bathtub_service)\n",
+    "system_service = build_system_service(bathroom_heating_service, bathtub_service)\n",
     "render_service(system_service, style=\"\")"
    ]
   },
@@ -1131,7 +1131,7 @@
     }
    ],
    "source": [
-    "system_service = product(bathroom_heating_service, bathtub_service, door_service, kitchen_exhaust_fan_service)\n",
+    "system_service = build_system_service(bathroom_heating_service, bathtub_service, door_service, kitchen_exhaust_fan_service)\n",
     "\n",
     "print(f\"Number of states: {len(system_service.states)}\")\n",
     "print(f\"Number of actions: {len(system_service.actions)}\")\n",
