add new use case from 'Yadav et al. 2013, IJCAI'

--- a/docs/notebooks/04-use-cases.ipynb
+++ b/docs/notebooks/04-use-cases.ipynb
@@ -535,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Garden Bots System\n",
+    "## The Garden Bots System (Yadav & Sardina 2011, AAMAS)\n",
     "\n",
     "Here we consider a variant of the example described in:\n",
     "\n",
@@ -1327,10 +1327,70 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Media room scenario (Yadav et al. 2013, IJCAI)\n",
+    "\n",
+    "This use case is inspired by:\n",
+    "\n",
+    "[Yadav, N., Felli, P., De Giacomo, G., & Sardina, S. (2013, August).\n",
+    "Supremal Realizability of Behaviors with Uncontrollable Exogenous Events.\n",
+    "In IJCAI (pp. 1176-1182).](http://www.diag.uniroma1.it/~degiacom/papers/2013/IJCAI13yfds-long.pdf)\n",
+    "\n",
+    "[![click here if the image does not display](images/media-room-scenario.png)](images/media-room-scenario.png)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The services of this scenario are:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(\"projector service\")\n",
+    "projector_service = build_service_from_transitions(\n",
+    "    {\n",
+    "        \"p0\": {\n",
+    "            \"warm_up\": \"p1\",\n",
+    "            \"source\": \"p2\",\n",
+    "        },\n",
+    "        \"p1\": {\n",
+    "            \"\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"p0\",\n",
+    "    {\"p0\"}\n",
+    ")\n",
+    "render_service(projector_service)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
